[Changes for 1.07_01 (JSON::Syck 0.30) - 2010-05-20]

* Upgrade from Module::Install 0.68 to 0.97

* Bump included Test::More dependency

[Changes for 1.07 (JSON::Syck 0.30) - 2009-04-25]

* Added the missing Loadfile function to JSON::Syck.
  Reported by: Dan McCormick

[Changes for 1.05 (JSON::Syck 0.29) - 2008-06-09]

* Loading a YAML stream containing Regexp nodes under -d:DProf should
  not fail with "panic: Devel::DProf inconsistent subroutine return".
  Reported by: Richard Jelinek

[Changes for 1.04 (JSON::Syck 0.29) - 2008-02-17]

* The 'Name "YAML::Syck::ImplicitBinary" used only once: possible typo'
  warnings no longer triggers in Perl 5.10 when running with perl -w.
  Reported by: Jesse Vincent

[Changes for 1.03 (JSON::Syck 0.29) - 2008-02-16]

* JSON::Syck: When $JSON::Syck::SingleQuote is false, implicit booleans
  such as "yes" and "no" should be dumped with double quotes, instead of
  single quotes (which breaks RFC 4627).
  Reported by: cho45

[Changes for 1.02 (JSON::Syck 0.28) - 2008-02-16]

* JSON::Syck: Colons in single-quoted strings are no longer loaded
  with an extra space after it.
  Reported by: Agent Zhang

[Changes for 1.01 (JSON::Syck 0.27) - 2008-01-19]

* JSON::XS is now promoted prominiently in JSON::Syck's documentation.

* Added support for Perl 5.11 and its first-class Regexp objects.
  Contributed by: Andreas Koenig

* Tests no longer fail incorrectly when JSON.pm 2.00+ is installed.
  Contributed by: Andreas Koenig

* Removed the unused Syck bytecode modules (yamlbyte.h and yaml2byte.c)
  to further reduce our memory footprint.

[Changes for 1.00 (JSON::Syck 0.26) - 2007-12-10]

* When $YAML::Syck::SingleQuote is set to true, Dump() now emits newlines
  in strings correctly.  (Previously it would emit extra newlines.)

[Changes for 0.99 (JSON::Syck 0.26) - 2007-10-23]

* TODOify tests as appropriate for Perl 5.005 and Perl 5.6.x.

[Changes for 0.98 (JSON::Syck 0.26) - 2007-10-13]

* Restore support for Perl 5.005 and earlier.