@@ -7,7 +7,6 @@ gram.c
 gram.h
 handler.c
 implicit.c
-inc/attributes.pm
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
